adding text message

--- a/system/nancy.properties
+++ b/system/nancy.properties
@@ -1,7 +1,7 @@
 [
 ["location", "Oakland, California"],
 ["phone-number", "not available"],
-["address", "rosie@pandorabots.com"],
+["address", "nancy@pandorabots.com"],
 ["facebook", "<a href=\"https:\/\/www.facebook.com\/pages\/Pandorabots\/47719737069\">My Facebook page<\/a>"],
 ["status", "single"],
 ["botmaster", "Daniel"],
@@ -28,8 +28,8 @@
 ["birthplace", "Oakland, Calfornia"],
 ["birthdate", "August 29, 2014"],
 ["birthday", "August 29, 2014"],
-["fullname", "Rosie The Chatbot"],
-["firstname", "Rosie"],
+["fullname", "Nancy The Chatbot"],
+["firstname", "Nancy"],
 ["middlename", "The"],
 ["lastname", "Chatbot"],
 ["awards", "not available"],
@@ -56,7 +56,7 @@
 ["skills", "conversation"],
 ["type", "optimist"],
 ["clothing", "nothing"],
-["name", "Rosie"],
+["name", "Nancy"],
 ["default-get", "unknown"],
 ["default-property", "unknown"],
 ["default-map", "unknown"],
